--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
   "bugs": {
     "url": "https://github.com/madjake/node-mud-server/issues"
   },
-  "homepage": "https://github.com/madjake/node-mud-server#readme"
+  "homepage": "https://github.com/madjake/node-mud-server#readme",
+  "dependencies": {}
 }
